assets/css/rtl-basic.css
/* ... */
#main-signature .form-inline div {
    float: right;
}

table td,
table th {
    text-align: right;
}
table.layout {
    width: 100%;
    border-collapse: collapse
}
table.display {
    margin: 1em 0
}
table.display td,
table.display th {
    border: 1px solid #B3BFAA;
    padding: .5em 1em
}
table.display th {
    background: #D5E0CC !important;
}
table.display td {
    background: #fff !important;
}
table.responsive-table {
    box-shadow: 0 1px 10px rgba(0, 0, 0, .2)
}
@media only screen and (max-width: 780px) {
    table.responsive-table {
        box-shadow: none
    }
    table.responsive-table thead {
        display: none
    }
    table.display td,
    table.display th {
        padding: .5em
    }
    table.responsive-table td:nth-child(1):before {
        content: 'Timestamp'
    }
    table.responsive-table td:nth-child(2):before {
        content: 'Audit'
    }
    table.responsive-table td:nth-child(1),
    table.responsive-table td:nth-child(2) {
        padding-right: 25%
    }
    table.responsive-table td:nth-child(1):before,
    table.responsive-table td:nth-child(2):before {
        position: absolute;
        right: .5em;
        font-weight: 700
    }
    table.responsive-table td,
    table.responsive-table tr {
        display: block
    }
    table.responsive-table tr {
        position: relative;
        margin-bottom: 1em;
        box-shadow: 0 1px 10px rgba(0, 0, 0, .2)
    }
    table.responsive-table td {
        border-top: none
    }
    table.responsive-table td.time {
        background: #D5E0CC !important;
        border-top: 1px solid #B3BFAA
    }
    table.responsive-table td.actions {
        position: absolute;
        top: 0;
        left: 0;
        border: none;
        background: 0 0
    }
}

table.display th {
    background: none !important;
}

table.display td, table.display th {
    border: none;
    padding: .5em 1.8em;
    vertical-align: top;
}

table.responsive-table {
    box-shadow: none;
}

#audit-trail-wrapper .main .history table tr td:first-child,
#audit-trail-wrapper .main .history table th:first-child{
    padding: .5em 0 !important;
    text-align: right;
}

#audit-trail-wrapper .main .history .time{
    white-space: nowrap;
}


#audit-trail-wrapper .footer {
    background: #F3F3F4 !important;
    padding: 10px 45px;
    padding-bottom: 25px;
    margin: 100px -15px 0px;
    page-break-inside: avoid;
}


#audit-trail-wrapper .footer .text {
    max-width: 435px;
    padding: 15px 5px !important;
    font-size: 16px;
    margin-top: 20px !important;
}

#audit-trail-wrapper .footer .right {
    position: relative;
    top: 45px;
    font-weight: bold;
}

#audit-trail-wrapper .bottom-footer{
    margin-top: 25px;
    margin-right: 10px;
    margin-left: 10px;
    font-size: 13px;
    display: flex;
    justify-content: space-between;
}

#audit-trail-wrapper .bottom-footer > div{
    display: inline-block;
}

#audit-trail-wrapper .bottom-footer a{
    color: #575759;
    font-size: 13px;
}

#audit-trail-wrapper .bottom-footer .audit-signature img{
    height: auto;
    width: 12px;
    margin-top: -5px;
    margin-left: 5px;
}

#audit-trail-wrapper .page-url-qr{
    width: 110px;
}

#audit-trail-wrapper .page-url-qr .wrapper{
    background-color: #fff !important;
    padding: 10px;

}

#audit-trail-wrapper .page-url-qr img{
    width: 90px;
    height: 90px;
}

#audit-trail-wrapper .header .logo{
    padding-top: 17px;
    font-size: 13px;
    font-weight: 400;
    color: #575759;
    width: 180px;
}

#audit-trail-wrapper .header .logo img{
    width: 100%;
}

#audit-trail-wrapper .digital-signature-image img{
    width: 100%;
    max-width: 100%;
    height: auto;
}

.esig-icon-doorkey{
    padding-left: 20px;
}

/*PLUGIN FIXES*/

#audit-trail-wrapper .row {
    margin-right: inherit !important;
    margin-left: inherit !important;
}
/* ... */

